# GraphicsPractice

ExportFrameBuffer/: .gitignore  AssimpAdaptor.cpp  AssimpAdaptor.h  Box.cpp  CMakeLists.txt  GLObject.cpp  GLObject.h  ModelData.cpp  ModelData.h  ProgramManager.cpp  ProgramManager.h  README.md  cmrDepthRenderer.cpp  cmrDepthRenderer.h  main.cpp
ExportFrameBuffer/TestCase/: CMakeLists.txt  main.cpp
ExportFrameBuffer/cmake/: FindASSIMP.cmake.template  FindGLFW.cmake.template
ExportFrameBuffer/cmrDepthRenderer/: Box.h  CMakeLists.txt  Const.h  LibExport.h  ModelData.cpp  ModelData.h  ShaderDefine.h  cmrDepthRenderer.cpp  cmrDepthRenderer.h
QtGLAD/: CMakeLists.txt  Renderer.cpp  Renderer.h  glad.c  main.cpp
QtGLEW/: CMakeLists.txt  DummyWidget.cpp  DummyWidget.h  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  Renderer.cpp  main.cpp
QtGLEW_PathRendering/: .gitignore  CMakeLists.txt  OpenGLWidget.h  Renderer.cpp  Renderer.h
QtGLEW_PathRendering/cmake/: FindGLEW.cmake_
QtOpenGL1/: CMakeLists.txt  CanvasWidget.cpp  CopyDependencies.bat
QtOpenGLFreeType/: CMakeLists.txt  CanvasWidget.cpp  CanvasWidget.h  main.cpp
QtOpenGLPractice/: .gitignore  Box.cpp  Box.h  CMakeLists.txt  Const.h  DefaultOperation.cpp  DemoOperation.cpp  DemoOperation.h  EditVectorFontOperation.cpp  EditVectorFontOperation.h  FontManager.cpp  FontManager.h  FreeTypeUtils.cpp  GLObject2D.cpp  GLObject2D.h  Geometry.cpp  Geometry.h  GlyphOutlineGenerator.cpp  GlyphOutlineGenerator.h  OpenGLWidget.cpp  OpenGLWidget.h  Operation.cpp  Operation.h  ProgramManager.cpp  ProgramManager.h  README.md  Renderer.cpp  Renderer.h  ShaderSource.h  UnicodeOutlineOperation.cpp  UnicodeOutlineOperation.h  Utils.cpp  Utils.h  ViewPort.cpp  ViewPort.h  main.cpp
QtOpenGLPractice/Components/: FontManager.cpp  FontManager.h  GLObject2D.cpp  GLObject2D.h  PersistMapRingBuffer.cpp  PersistMapRingBuffer.h  ProgramManager.cpp  ProgramManager.h  Renderer.cpp  Renderer.h  SegmentMemory.cpp  SegmentMemory.h  StippleConst.h  StippleManager.cpp  StippleManager.h  ViewPort.cpp  ViewPort.h
QtOpenGLPractice/Core/: DefineConst.h  DefineEnum.h  DefineStruct.h  Mesh.cpp  Mesh.h  OpenGLHeader.h
QtOpenGLPractice/Data/: AllChineseChar.h  ShaderSource.h  StippleConst.h
QtOpenGLPractice/Model/: ManyCircles.cpp  ManyCircles.h  Mesh.cpp  Mesh.h  PersistMapRingBuffer.cpp  PersistMapRingBuffer.h  SegmentMemory.cpp  SegmentMemory.h
QtOpenGLPractice/Operations/: DefaultOperation.cpp  DemoOperation.cpp  DemoOperation.h  EditVectorFontOperation.cpp  EditVectorFontOperation.h  FBOOperation.cpp  FBOOperation.h  Operation.cpp  Operation.h  PersistMapOperation.cpp  PersistMapOperation.h  UnicodeOutlineOperation.cpp  UnicodeOutlineOperation.h
QtOpenGLPractice/Performance/: CirclesColorAttrib.cpp  CirclesColorAttrib.cpp2  CirclesColorAttrib.h  CirclesColorUniform.cpp  CirclesColorUniform.cpp2  CirclesColorUniform.h  PersistMapOperation.cpp  PersistMapOperation.h  StippleOperation.cpp  StippleOperation.h
QtOpenGLPractice/Util/: ArgumentUtil.cpp  ArgumentUtil.h  FreeTypeUtils.cpp  FreeTypeUtils.h  GlyphOutlineGenerator.cpp  ManyCircles.cpp  ManyCircles.h  ManyRectangles.cpp  ManyRectangles.h  MeshBuilder.cpp  MeshBuilder.h  Utils.cpp  Utils.h
QtOpenGLPractice/cmake/: FindFreeType.cmake  FindFreeType.cmake.template  FindGLEW.cmake.template  FindZLIB.cmake.template
QtOpenGLPractice/glad/: glad.h
QtOpenGLPractice/resource/: benchmark0731.txt  new_font.txt  old_font.txt  persistent_mapping_ring_buffer_16w_circles.txt  persistent_mapping_ring_buffer_1w_circles.txt  persistent_mapping_ring_buffer_4w_circles.txt
